finish detaisl, cart, checkout(WIP)

--- a/detail.html
+++ b/detail.html
@@ -11,36 +11,7 @@
 <body>
   <header-component></header-component>
   <main>
-    <div class="detail-container">
-      <header class="detail-header"></header>
-      <main>
-        <div class="slider-price">
-          <div class="slider">
-            <svg class="arrow left" viewBox="0 0 299 299" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M269 132.179C282.333 139.877 282.333 159.123 269 166.821L104.75 261.65C91.4167 269.348 74.75 259.726 74.75 244.33L74.75 54.6702C74.75 39.2742 91.4167 29.6517 104.75 37.3497L269 132.179Z" fill="#3C9CD0"/>
-            </svg>
-            <div class="slider-images">
-              <img class="active" src="img/monstermaker-inicio.png">
-              <img src="img/monstermaker-captura.png">
-            </div>
-            <svg class="arrow right" viewBox="0 0 299 299" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M269 132.179C282.333 139.877 282.333 159.123 269 166.821L104.75 261.65C91.4167 269.348 74.75 259.726 74.75 244.33L74.75 54.6702C74.75 39.2742 91.4167 29.6517 104.75 37.3497L269 132.179Z" fill="#3C9CD0"/>
-            </svg>
-          </div>
-          <div class="price-container">
-            <p class="discount">-20%</p>
-            <p class="old-price">20.00€</p>
-            <p class="current-price">16.00€</p>
-          </div>
-        </div>
-        <div class="info">
-          <p><span>Title:</span> Monster maker.</p>
-          <p><span>Developer:</span> JCBarbaf Studios.</p>
-          <p><span>Description:</span> Monster Maker es un juego de gestión de recursos donde tendrás que criar monstruos para luego venderlos a las mazmorras del señor oscuro. El juego cuenta con un sistema de día y noche, crecimiento de las criaturas y las plantaciones e incluso una guarida generada aleatoriamente..</p>
-          <p><span>Genres:</span><span class="genre">Adventure</span><span class="genre">farming simulator</span><span class="genre">rpg</span></p>
-        </div>
-      </main>
-    </div>
+    <details-component></details-component>
   </main>
 </body>
 </html>
