--- a/checkout.html
+++ b/checkout.html
@@ -10,166 +10,6 @@
 </head>
 <body>
   <header-component></header-component>
-  <div class="checkout">
-    <div class="product-summary">
-      <header>
-        <h3>Shopping cart</h3>
-      </header>
-      <div class="product-list">
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Makerrrrr</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Maker</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Maker</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Maker</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Maker</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-        <div class="product">
-          <button class="delete-button">
-            <svg class="trash-icon" viewBox="0 0 207 260" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 52.5789C0 46.1841 5.34675 41 11.9423 41H195.058C201.653 41 207 46.1841 207 52.5789V63H0V52.5789Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M58.8427 15.9878C59.811 6.89683 67.4898 0 76.6432 0H130.079C139.16 0 146.803 6.79209 147.858 15.8011L151 42.6146L139.147 44L136.005 17.1865C135.654 14.1835 133.106 11.9194 130.079 11.9194H76.6432C73.5921 11.9194 71.0325 14.2184 70.7097 17.2487L67.867 43.9378L56 42.6769L58.8427 15.9878Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M164.159 242.766L185.151 61L197 62.3727L176.008 244.139C174.964 253.179 167.321 260 158.234 260H49.7656C40.6794 260 33.036 253.179 31.992 244.139L11 62.3727L22.8491 61L43.8411 242.766C44.1891 245.78 46.7369 248.053 49.7656 248.053H158.234C161.263 248.053 163.811 245.78 164.159 242.766Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M54.2819 97.0521C57.6097 96.6205 60.6642 98.9164 61.1042 102.18L75.9468 212.257C76.3869 215.521 74.0459 218.516 70.7181 218.948C67.3903 219.379 64.3358 217.084 63.8958 213.82L49.0532 103.743C48.6131 100.479 50.9541 97.4837 54.2819 97.0521Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M104 97C107.314 97 110 99.6688 110 102.961V213.039C110 216.331 107.314 219 104 219C100.686 219 98 216.331 98 213.039V102.961C98 99.6688 100.686 97 104 97Z" fill="#3C9CD0"/>
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M152.718 97.0521C149.39 96.6205 146.336 98.9164 145.896 102.18L131.053 212.257C130.613 215.521 132.954 218.516 136.282 218.948C139.61 219.379 142.664 217.084 143.104 213.82L157.947 103.743C158.387 100.479 156.046 97.4837 152.718 97.0521Z" fill="#3C9CD0"/>
-            </svg>
-          </button>
-          <img class="product-miniature" src="img/monstermaker-inicio.png">
-          <div class="product-details">
-            <p class="product-name">Monster Maker</p>
-            <div class="quantity-price">
-              <div class="quantity-container">
-                <button class="minus-button">-</button>
-                <input class="quantity" type="number" value="1">
-                <button class="plus-button">+</button>
-              </div>
-              <p class="price">20.00€</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="total-payment">
-      <button class="payment-button">Pay with Stripe</button>
-      <p class="quantity-total">5 products</p>
-      <div class="total-container">
-        <p>Total:</p>
-        <p class="total-price">100€</p>
-      </div>
-    </div>
-  </div>
+  <checkout-component></checkout-component>
 </body>
 </html>
