faqs y pequeños detalles

--- a/detail.html
+++ b/detail.html
@@ -10,8 +10,7 @@
 </head>
 <body>
   <header-component></header-component>
-  <main>
-    <details-component></details-component>
-  </main>
+  <details-component></details-component>
+  <footer-component></footer-component>
 </body>
 </html>
