--- a/faqs.html
+++ b/faqs.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header-component></header-component>
-  <checkout-component></checkout-component>
+  <faqs-component></faqs-component>
   <footer-component></footer-component>
 </body>
 </html>
